--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,5 +12,7 @@ Depends:
 Imports:
     dplyr (>= 0.4.0),
     readr (>= 0.1.0), 
-    magrittr (>= 1.5)
+    magrittr (>= 1.5),
+    stringr (>= 1.0.0)
+    
 Suggests: testthat
