--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,5 +10,7 @@ importFrom(ape,read.tree)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,left_join)
 importFrom(dplyr,select)
+importFrom(magrittr,"%<>%")
 importFrom(readr,read_delim)
+importFrom(readr,read_tsv)
 importFrom(stringr,str_c)
