update tests, add treebuildgin file, bump version

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: phyloseq.tools
 Type: Package
 Title: convenience functions for working with phyloseq
-Version: 0.0.5
+Version: 0.1.0
 Date: 2015-04-23
 Author: zach charlop-powers
 Maintainer: zach charlop-powers <zcharlop@rockefeller.edu>
@@ -13,7 +13,8 @@ Imports:
     dplyr (>= 0.4.0),
     readr (>= 0.1.0), 
     magrittr (>= 1.5),
-    stringr (>= 1.0.0)
+    stringr (>= 1.0.0),
+    leaflet (>= 1.0.0)
 Suggests: 
   testthat,
   foreach,
