--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,10 +8,10 @@ Maintainer: zach charlop-powers <zcharlop@rockefeller.edu>
 Description: convenience functions for working with phyloseq
 License: MIT
 Depends:
-    phyloseq (1.13)
+    phyloseq (>=1.13)
 Imports:
     dplyr (>= 0.4.0),
-    readr (>= 0.1.0), 
+    readr (>= 0.2.0), 
     magrittr (>= 1.5),
     stringr (>= 1.0.0),
     leaflet (>= 1.0.0),
